--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <img scr="https://pixabay.com/fr/photos/tori-japonais-sanctuaire-torii-1976609/"alt="" />
+    <img scr="bureau/HTML/Partie 1/Ex6/billy elliot.jpg">
   </body>
 </html>
