--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <img scr="bureau/HTML/Partie 1/Ex6/billy elliot.jpg">
+    <img scr="billy elliot.jpg" alt="Film fav"/>
   </body>
 </html>
